feat: specify bucketPathPrefix when importing ZTJ
